--- a/index.html
+++ b/index.html
@@ -156,10 +156,9 @@
     <footer class="footer">
         <div class="container">
             <div class="links">
-                <a href="https://www.facebook.com/flavio.e.oliveira"><i class="fa fa-facebook"></i></a>
-                <a href="https://www.instagram.com/flavio.e.oliveira/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="mailto:flavioesteniodeoliveira@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-                <a href="mailto:caiofreiren@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/_pautiliotec/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/gabriel.pautilio"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="mailto:skellethero10@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
             </div>
             <p>Desenvolvido por gabriel pautilio</p>
         </div>
