--- a/contato.html
+++ b/contato.html
@@ -65,11 +65,11 @@
                     <p>caiofreiren@gmail.com</p>
                 </div>
                 <div class="left-side">
-                    <i class="fa fa-mobile"></i>
+                    <i class="fa fa-whatsapp"></i>
                     <p>+11 97974-9986</p>
                 </div>
                 <div class="left-side">
-                    <i class="fa fa-mobile"></i>
+                    <i class="fa fa-whatsapp"></i>
                     <p>+11 98727-9752</p>
                 </div>
             </div>
