--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="cards">
                 <!--card item 1-->
                 <div class="cards-item">
-                    <img src="img/exemplo.jpg" alt="cliente-1">
+                    <img src="img/Gabriela_Martes.jpg" alt="cliente-1">
                     <p class="nome-user">Gabriela Martes</p>
                     <p class="depoimento-user"> "Quero expressar minha profunda 
                         gratidão pelo serviços que vocês me concederam. 
@@ -104,14 +104,14 @@
                      <i class="fa fa-star" aria-hidden="true"></i> 
                      <i class="fa fa-star" aria-hidden="true"></i> 
                      <i class="fa fa-star" aria-hidden="true"></i> 
-                     <i class="fa fa-star-o" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
                     </div>
 
                 </div>
                 <!--end card item 1-->
                 <!--card item 2-->
                 <div class="cards-item">
-                    <img src="img/exemplo.jpg" alt="cliente-2">
+                    <img src="img/Dani.jpg" alt="cliente-2">
                     <p class="nome-user">Daniele Marques</p>
                     <p class="depoimento-user">"Serviços de altíssima qualidade, 
                     Sempre tirando todas as dúvidas possíveis, 
@@ -122,7 +122,7 @@
                      <i class="fa fa-star" aria-hidden="true"></i> 
                      <i class="fa fa-star" aria-hidden="true"></i> 
                      <i class="fa fa-star" aria-hidden="true"></i> 
-                     <i class="fa fa-star-o" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
                     </div>
 
                 </div>
@@ -130,10 +130,11 @@
                 <!--card item 3-->
                 <div class="cards-item">
                     <img src="img/exemplo.jpg" alt="cliente-3">
-                    <p class="nome-user">cliente 3</p>
-                    <p class="depoimento-user"> Quero expressar minha profunda 
-                        gratidão pelo serviços que vocês me concederam. 
-                        Me passou muita confiança do começo ao fim.
+                    <p class="nome-user">Wilson Oliveira</p>
+                    <p class="depoimento-user"> "Tive diversos problemas para poder achar um advogado, 
+                        não tive nenhuma assistência na hora de procurar um, 
+                        mas acabei encontrando o serviço de vocês pelo Google, 
+                        e estou muito satisfeito. Obrigado por toda ajuda!!"
 
                     </p>
                     <div class="estrelas">
@@ -141,7 +142,7 @@
                      <i class="fa fa-star" aria-hidden="true"></i> 
                      <i class="fa fa-star" aria-hidden="true"></i> 
                      <i class="fa fa-star" aria-hidden="true"></i> 
-                     <i class="fa fa-star-o" aria-hidden="true"></i>
+                     <i class="fa fa-star" aria-hidden="true"></i>
                     </div>
 
                 </div>
