--- a/Localização.html
+++ b/Localização.html
@@ -51,12 +51,18 @@
         <div class="container">
             <div class="localização-text">
                 <h3>Nossa localidade</h3>
-                <p>Nossa localizaçao fica no centro de São Bernardo do campo, ficamos proximo a marechal, 
-                    de fácil acesso e tambem acomodamento para todos os nosso clintes. 
-                    Aqui nós freezamos sempre em atender nossos clintes da melhor forma!!</p>
+                <p>Nossa localização fica no centro de São Bernardo do Campo, ficamos próximos à Marechal, 
+                    de fácil acesso e também acomodamento para todos os nossos clientes. 
+                    Aqui nós prezamos sempre em atender nossos clientes da melhor forma!</p>
                     <p>Avenida Francisco Prestes Maia 1052 - centro - Sala 1 - São Bernardo do Campo.</p>
-                    <p>Clique aqui e tenha um direcionamento direto para o Maps.</p>
+                    <p>Clique em "Maps" logo abaixo e tenha um redirecionmento direto ao maps.</p>
+                    <div class="localização-maps">
+                        <a href="https://www.google.com/maps/place/Av.+Francisco+Prestes+Maia,+1052+-+Centro,+S%C3%A3o+Bernardo+do+Campo+-+SP,+09770-000/@-23.7123343,-46.5437029,17z/data=!3m1!4b1!4m6!3m5!1s0x94ce418f36c2dcd9:0x6a0dbad6d6b8d520!8m2!3d-23.7123343!4d-46.5437029!16s%2Fg%2F11b8v82d5s?entry=ttu" target="_blank">
+                            Maps
+                        </a>
+                    </div>
                     <a href="contato.html" class="btn animate-btn">entrar em contato</a>
+                    
             </div>
             <div class="localização-img">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.982070661653!2d-46.5437029!3d-23.7123343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce418f36c2dcd9%3A0x6a0dbad6d6b8d520!2sAv.%20Francisco%20Prestes%20Maia%2C%201052%20-%20Centro%2C%20S%C3%A3o%20Bernardo%20do%20Campo%20-%20SP%2C%2009770-000!5e0!3m2!1spt-PT!2sbr!4v1704412053420!5m2!1spt-PT!2sbr" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
