atuação,style ok

--- a/Localização.html
+++ b/Localização.html
@@ -55,7 +55,7 @@
                     de fácil acesso e também acomodamento para todos os nossos clientes. 
                     Aqui nós prezamos sempre em atender nossos clientes da melhor forma!</p>
                     <p>Avenida Francisco Prestes Maia 1052 - centro - Sala 1 - São Bernardo do Campo.</p>
-                    <p>Clique em "Maps" logo abaixo e tenha um redirecionmento direto ao maps.</p>
+                    <p>Clique em "Maps" logo abaixo e tenha um direcionmento direto ao maps.</p>
                     <div class="localização-maps">
                         <a href="https://www.google.com/maps/place/Av.+Francisco+Prestes+Maia,+1052+-+Centro,+S%C3%A3o+Bernardo+do+Campo+-+SP,+09770-000/@-23.7123343,-46.5437029,17z/data=!3m1!4b1!4m6!3m5!1s0x94ce418f36c2dcd9:0x6a0dbad6d6b8d520!8m2!3d-23.7123343!4d-46.5437029!16s%2Fg%2F11b8v82d5s?entry=ttu" target="_blank">
                             Maps
