--- a/atuação.html
+++ b/atuação.html
@@ -122,8 +122,8 @@
             <div class="dados-item">
                 <img src="img/cloud.png" alt="">
                 <p>
-                    <strong>+360</strong> <br>
-                    projetos concluidos 
+                    <strong>+150</strong> <br>
+                    Casos encerrados 
                 </p>
             </div>
             <!--end dados item 1-->
@@ -131,8 +131,8 @@
             <div class="dados-item">
                 <img src="img/manager.png" alt="">
                 <p>
-                    <strong>+890</strong> <br>
-                    clientes satisfeitos 
+                    <strong>+132</strong> <br>
+                    Clientes satisfeitos 
                 </p>
             </div>
             <!--end dados item 2-->
@@ -140,20 +140,12 @@
             <div class="dados-item">
                 <img src="img/cloud.png" alt="">
                 <p>
-                    <strong>+4303</strong> <br>
-                    jornada de trabalho
+                    <strong>+500</strong> <br>
+                    Jornada de trabalho
                 </p>
             </div>
             <!--end dados item 3-->
-            <!--dados item 4-->
-            <div class="dados-item">
-                <img src="img/cloud.png" alt="">
-                <p>
-                    <strong>+250</strong> <br>
-                    publicidade paga 
-                </p>
-            </div>
-            <!--end dados item 4-->
+            
         </div>
     </section>
     <!--footer-->
