--- a/contato.html
+++ b/contato.html
@@ -58,7 +58,7 @@
                 <p>Avenida Francisco Prestes Maia 1052 - centro - sala 1 - São Bernardo do Campo.</p>
                 <div class="left-side">
                     <i class="fa fa-envelope"></i>
-                    <p>frex201@gmail.com</p>
+                    <p>flavioesteniodeoliveira@gmail.com</p>
                 </div>
                 <div class="left-side">
                     <i class="fa fa-envelope"></i>
@@ -100,10 +100,10 @@
     <!--end footer-->
     <div class="whats">
         <a href=" https://wa.me/5511979749986" target="_blank">
-        <img src="img/whatsapp.png" width="50px" alt="fale conosco no whatsapp" title="fale conosco no whatsapp">
+        <img src="img/whatsapp.png" width="50px" alt="Flavio Estenio" title="Flavio Estenio">
         </a>
         <a href=" https://wa.me/5511987279752" target="_blank">
-            <img src="img/whatsapp.png" width="50px" alt="Caio" title="Caio">
+            <img src="img/whatsapp.png" width="50px" alt="Caio Freiren" title="Caio Freiren">
             </a>
     </div>
     <script src="CSS/js/main.js"></script>
