--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
     <!--end footer-->
     <div class="whats">
         <a href=" https://wa.me/5511979749986" target="_blank">
-        <img src="img/whatsapp.png" width="50px" alt="Flavio" title="Flavio">
+        <img src="img/whatsapp.png" width="50px" alt="Flavio Estenio" title="Flavio Estenio">
         </a>
         <a href=" https://wa.me/5511987279752" target="_blank">
-            <img src="img/whatsapp.png" width="50px" alt="Caio" title="Caio">
+            <img src="img/whatsapp.png" width="50px" alt="Caio Freiren" title="Caio Freiren">
             </a>
     </div>
     <script src="CSS/js/main.js"></script>
