--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </nav>
             <section class="banner">
                 <div class="banner-text">
-                    <h1>CF advogados</h1>
+                    <h1>CF advogados 10</h1>
                     <p>“A mais bela função da humanidade é a de administrar a justiça.” -Voltaire</p>
                     <a href="contato.html" class="btn animate-btn">entrar em contato</a>
 
