--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <!--end card item 1-->
                 <!--card item 2-->
                 <div class="cards-item">
-                    <img src="img/Dani.jpg" alt="cliente-2">
+                    <img src="img/Cdani.jpg" alt="cliente-2">
                     <p class="nome-user">Daniele Marques</p>
                     <p class="depoimento-user">"Serviços de altíssima qualidade, 
                     Sempre tirando todas as dúvidas possíveis, 
