--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="shortcut icon" href="ICO/cf-2.ico" type="image/x-icon">
     <title>CF Advogados</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J27HSPRED5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J27HSPRED5');
+</script>
 </head>
 <body>
     <!--header-->
